--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@ img.emoji {
   src="https://www.facebook.com/tr?id=1356839434525377&ev=PageView&noscript=1"
 /></noscript>
 
+<iframe width="560" height="315" src="https://www.youtube.com/embed/LRPXDusCro4?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 <script data-cfasync="false" data-pagespeed-no-defer type="text/javascript">//<![CDATA[//]]>
 </script>
